<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.nenadvukojevic.stepsandcaloriesapp.viewmodel.CaloriesViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pozzpozadina"
        tools:context=".view.fragments.CaloriesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cly_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!--two way binding-->
            <EditText
                android:id="@+id/search_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:background="@drawable/search_input_style"
                android:padding="12dp"
                android:drawablePadding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/search"
                android:textColorHint="@color/white"
                android:text="@={viewModel.word}"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_search" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:text="@string/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:onClick="@{ () -> viewModel.getSearchFoodResponse()}"
                app:cornerRadius="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cly_search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar

            android:visibility="visible"
            android:id="@+id/search_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:indeterminateDrawable="@drawable/progress"
            style="?android:attr/progressBarStyle"
            app:layout_constraintTop_toBottomOf="@+id/cly_search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_not_found"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_double"
            android:text="@string/food_not_found"
            android:textSize="@dimen/text_title"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/cly_search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adUnitId="ca-app-pub-4256849898367595/7173164507"
            app:adSize= "BANNER"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>